--- a/gaal.tex
+++ b/gaal.tex
@@ -46,9 +46,12 @@
 
 
 \usetheme{Madrid}
+\usecolortheme{beaver}
 
 \setbeamertemplate{theorems}[numbered]
 
+
+\setbeamertemplate{enumerate items}[circle]
 \newtheorem{nada}{Nada}
 
 
