update: mudança de base

--- a/gaal.tex
+++ b/gaal.tex
@@ -227,6 +227,7 @@ Departamento de Ciências da Natureza -- RCN  \\
 \include{lild}
 \include{posicao-retas}
 \include{subespacos}
+\include{mudanca-base}
 \include{autovetores}
 \include{ortogonal}
 
