--- a/gaal.tex
+++ b/gaal.tex
@@ -34,11 +34,9 @@
 %\newcommand{\code}[1]{{\colorbox{gray}{\texttt{#1}}}
 
 %\syntaxonly
-%\includeonlyframes{determinantes}
 %\includeonly{determinantes}
-%\includeonlyframes{autovalores} 
-%\includeonly{area-circulo,def_integral,int_indefinida_subst,areas,int_partes,int_trig,int_frac_parc,aplicacoes,improprias}%
-%\includeonly{def_integral,improprias}%
+%\includeonlyframes{conicas,comp} 
+
 
 
 \usepackage[labelformat=empty]{caption}
@@ -230,5 +228,6 @@ Departamento de Ciências da Natureza -- RCN  \\
 \include{mudanca-base}
 \include{autovetores}
 \include{ortogonal}
+\include{conicas}
 
 \end{document}
