--- a/gaal.tex
+++ b/gaal.tex
@@ -228,6 +228,7 @@ Departamento de Ciências da Natureza -- RCN  \\
 \include{mudanca-base}
 \include{autovetores}
 \include{ortogonal}
-\include{conicas}
+%\include{conicas}
+\include{conicas-simples}
 
 \end{document}
